--- a/environments/llm-music-teacher.yaml
+++ b/environments/llm-music-teacher.yaml
@@ -7,3 +7,12 @@ dependencies:
   - pip
   - pip:
       - pyautogen
+      - black==23.10.1
+      - flake8==6.1.0
+      - isort==5.12.0
+      - mypy==1.6.1
+      - nbqa==1.7.0
+      - pre-commit==3.5.0
+      - pre-commit-hooks==4.5.0
+      - pytest==7.4.3
+      - structlog==23.2.0
